2017-05-11 Joe Hunt           Customer/Supplier Balances Report | Allocated column not showing correctly. Fixed.
2017-03-19 Ap.Muthu           Entropy fix update. random_id() in main.inc wraps native uniqid()
2017-01-18 Ap.Muthu           Fixed an array_combine object issue.
2016-12-23 Ap.Muthu           Moved from FAMods: Fixed bug - submitting forms in FA 2.3.x when checkbox field not changed
2016-12-04 Joe Hunt           Rerun Item Sales Summary Report fix
2016-11-29 Joe Hunt           Fixed A Bug in Item Sales Summary Report
2016-11-29 Joe Hunt           0003667: supplier payment link after entering supplier invoice result. Fixed. 
2016-11-14 Janusz Dobrowolski Cleanup in sales_invoice_db.inc (obsolete parameters in update_debtor_trans_allocation calls)
2016-07-26 Joe Hunt           Dimension is missing in Supplier Invoice View, GL Rows.
2016-07-24 Ap.Muthu           Minor bugs in deleting fiscal years
2016-05-23 Joe Hunt           Tabbed dialogs allowed non access pages.
2016-05-23 Joe Hunt           Bloomberg Rate fix for change of wrapper from span to div.
2016-05-20 Janusz Dobrowolski Bank Accounts Edition fixes
2016-05-17 Janusz Dobrowolski de_DE and pt_PT installer translation typos fixed

2016-02-21 15:34:07 +0100 Joe Hunt 
Release 2.3.25.
M	version.php

2016-01-13 08:21:19 +0100 Joe Hunt 
Created new fiscal years in en_US-demo.sql
M	sql/en_US-demo.sql

2016-01-10 09:50:38 +0100 Janusz Dobrowolski 
Reverted invalid changes in manufacturing accounts back to cogs_account for BOM service items.
M	manufacturing/includes/db/work_order_issues_db.inc
M	manufacturing/includes/db/work_order_produce_items_db.inc
M	manufacturing/includes/db/work_orders_db.inc
M	manufacturing/includes/db/work_orders_quick_db.inc

2015-12-09 14:04:45 +0100 Joe Hunt 
Fixed a hardcoded amount_row with fixed 2 decimals. Removed and the default user_price_dec() is used.
M	purchasing/supplier_payment.php

2015-11-26 21:48:19 +0100 Janusz Dobrowolski 