@@ -1,3 +1,4 @@
+2017-05-12 Joe Hunt           Optimized Inventory Valuation Reports, 301 and 308.
 2017-05-11 Joe Hunt           Customer/Supplier Balances Report | Allocated column not showing correctly. Fixed.
 2017-03-19 Ap.Muthu           Entropy fix update. random_id() in main.inc wraps native uniqid()
 2017-01-18 Ap.Muthu           Fixed an array_combine object issue.
